--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node qserver/index.js",
-    "dev": "nodemon qserver/index.js"
+    "dev": "nodemon qserver/index.js",
+    "build":"npm install && npm install --prefix quibble && npm run build --prefix quibble"
   },
   "keywords": [],
   "author": "",
